detallitos de la doc
